<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="550dp"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <LinearLayout
        android:id="@+id/pad_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:background="@drawable/input"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pad_input_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:clickable="false"
            android:gravity="right|center_vertical"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="53dp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <Button
                android:id="@+id/pad_del_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/keyboard_del_selector" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/pad_1_btn"
        style="@style/key_12_pad_style"
        android:layout_alignLeft="@id/pad_input_layout"
        android:layout_below="@id/pad_input_layout"
        android:layout_marginTop="10dp"
        android:background="@drawable/keyboard_one_selector"
        android:contentDescription="@string/keyboard_0" />

    <Button
        android:id="@+id/pad_2_btn"
        style="@style/key_12_pad_style"
        android:layout_alignTop="@id/pad_1_btn"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/pad_1_btn"
        android:background="@drawable/keyboard_two_selector"
        android:contentDescription="@string/keyboard_2" />

    <Button
        android:id="@+id/pad_3_btn"
        style="@style/key_12_pad_style"
        android:layout_alignTop="@id/pad_1_btn"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/pad_2_btn"
        android:background="@drawable/keyboard_three_selector"
        android:contentDescription="@string/keyboard_3" />

    <Button
        android:id="@+id/pad_4_btn"
        style="@style/key_12_pad_style"
        android:layout_alignLeft="@id/pad_1_btn"
        android:layout_below="@id/pad_1_btn"
        android:layout_marginTop="10dp"
        android:background="@drawable/keyboard_four_selector"
        android:contentDescription="@string/keyboard_4" />

    <Button
        android:id="@+id/pad_5_btn"
        style="@style/key_12_pad_style"
        android:layout_alignRight="@id/pad_2_btn"
        android:layout_alignTop="@id/pad_4_btn"
        android:background="@drawable/keyboard_five_selector"
        android:contentDescription="@string/keyboard_5" />

    <Button
        android:id="@+id/pad_6_btn"
        style="@style/key_12_pad_style"
        android:layout_alignRight="@id/pad_3_btn"
        android:layout_alignTop="@id/pad_4_btn"
        android:background="@drawable/keyboard_six_selector"
        android:contentDescription="@string/keyboard_6" />

    <Button
        android:id="@+id/pad_7_btn"
        style="@style/key_12_pad_style"
        android:layout_alignLeft="@id/pad_1_btn"
        android:layout_below="@id/pad_4_btn"
        android:layout_marginTop="10dp"
        android:background="@drawable/keyboard_seven_selector"
        android:contentDescription="@string/keyboard_7" />

    <Button
        android:id="@+id/pad_8_btn"
        style="@style/key_12_pad_style"
        android:layout_alignRight="@id/pad_2_btn"
        android:layout_alignTop="@id/pad_7_btn"
        android:background="@drawable/keyboard_eight_selector"
        android:contentDescription="@string/keyboard_8" />

    <Button
        android:id="@+id/pad_9_btn"
        style="@style/key_12_pad_style"
        android:layout_alignRight="@id/pad_3_btn"
        android:layout_alignTop="@id/pad_7_btn"
        android:background="@drawable/keyboard_nine_selector"
        android:contentDescription="@string/keyboard_9" />

    <Button
        android:id="@+id/pad_star_btn"
        style="@style/key_12_pad_style"
        android:layout_alignLeft="@id/pad_1_btn"
        android:layout_below="@id/pad_7_btn"
        android:layout_marginTop="10dp"
        android:background="@drawable/keyboard_star_selector"
        android:contentDescription="@string/keyboard_star" />

    <Button
        android:id="@+id/pad_0_btn"
        style="@style/key_12_pad_style"
        android:layout_alignRight="@id/pad_2_btn"
        android:layout_alignTop="@id/pad_star_btn"
        android:background="@drawable/keyboard_zero_selector"
        android:contentDescription="@string/keyboard_0" />

    <Button
        android:id="@+id/pad_pound_btn"
        style="@style/key_12_pad_style"
        android:layout_alignRight="@id/pad_3_btn"
        android:layout_alignTop="@id/pad_star_btn"
        android:background="@drawable/keyboard_pound_selector"
        android:contentDescription="@string/keyboard_pound" />


</RelativeLayout>
