<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bt_connect_device"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bt_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bt_settings"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />


</LinearLayout>
